feat: add title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 ---
-<Layout title="">
+<Layout title="teaishealthy">
 	<h1>Hi there, I'm teaishealthy&nbsp👋</h1>
 	<div class="subtitle">or tea for short</div>
 	<p class="main-content">
