--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,6 +12,7 @@ const { title } = Astro.props as Props;
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+  <meta name="description" content="My personal website">
 	<meta name="viewport" content="width=device-width">
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 	<title>{title}</title>
