--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -3,22 +3,28 @@ import Layout from '../layouts/Layout.astro';
 ---
 <Layout title="">
     <h1>Tools I use</h1>
-    <p><img src="https://img.shields.io/badge/Languages-404040?style=for-the-badge" alt="Languages">
+    <p>
+        <img src="https://img.shields.io/badge/Languages-404040?style=for-the-badge" alt="Languages">
         <a href="https://www.python.org/about/"><img src="https://img.shields.io/badge/Python-202020?style=for-the-badge&amp;logo=python&amp;logoColor=white" alt="Python"></a>
         <a href="https://dart.dev/"><img src="https://img.shields.io/badge/Dart-202020?style=for-the-badge&amp;logo=dart" alt="Dart"></a> 
         <a href="https://www.javascript.com/"><img src="https://img.shields.io/badge/JavaScript-202020?style=for-the-badge&amp;logo=javascript&amp;logoColor=white" alt="JavaScript"></a>
         <a href="https://html.com/"><img src="https://img.shields.io/badge/HTML-202020?style=for-the-badge&amp;logo=html5&amp;logoColor=white" alt="HTML"></a> <a href="https://www.w3.org/TR/css-2020/"><img src="https://img.shields.io/badge/CSS-202020?style=for-the-badge&amp;logo=CSS3&amp;logoColor=white" alt="CSS"></a>  <a href="https://sass-lang.com/"><img src="https://img.shields.io/badge/Sass-202020?style=for-the-badge&amp;logo=Sass&amp;logoColor=white" alt="Sass"></a> 
         <img src="https://img.shields.io/badge/Markdown-202020?style=for-the-badge&amp;logo=Markdown&amp;logoColor=white" alt="Markdown"></p>
-        <p><img src="https://img.shields.io/badge/Frameworks-404040?style=for-the-badge" alt="Frameworks">
+    <p>
+        <img src="https://img.shields.io/badge/Frameworks-404040?style=for-the-badge" alt="Frameworks">
         <a href="https://nodejs.org/"><img src="https://img.shields.io/badge/Node.js-202020?style=for-the-badge&amp;logo=nodedotjs&amp;logoColor=white" alt="Node.js"></a>
         <a href="https://flutter.dev/"><img src="https://img.shields.io/badge/Flutter-202020?style=for-the-badge&amp;logo=flutter" alt="Flutter"></a>
         <a href="https://flask.palletsprojects.com/en/2.0.x/"><img src="https://img.shields.io/badge/Flask-202020?style=for-the-badge&amp;logo=flask" alt="Flask"></a>
         <a href="https://reactjs.org/"><img src="https://img.shields.io/badge/React-202020?style=for-the-badge&amp;logo=react&amp;logoColor=white&amp;textColor=white" alt="React"></a> 
-        <img src="https://img.shields.io/badge/Arduino-202020?style=for-the-badge&amp;logo=arduino&amp;logoColor=white" alt="Arduino"></p>
-        <p><img src="https://img.shields.io/badge/Databases-404040?style=for-the-badge" alt="Databases">
+        <img src="https://img.shields.io/badge/Arduino-202020?style=for-the-badge&amp;logo=arduino&amp;logoColor=white" alt="Arduino">
+    </p>
+    <p>
+        <img src="https://img.shields.io/badge/Databases-404040?style=for-the-badge" alt="Databases">
         <a href="https://www.mongodb.com/"><img src="https://img.shields.io/badge/MongoDB-202020?style=for-the-badge&amp;logo=mongodb&amp;logoColor=white" alt="MongoDB"></a>
-        <img src="https://img.shields.io/badge/sqlite-202020?style=for-the-badge&amp;logo=sqlite&amp;logoColor=white" alt="SQLite"></p>
-        <p><img src="https://img.shields.io/badge/Tools-404040?style=for-the-badge" alt="Tools">
+        <img src="https://img.shields.io/badge/sqlite-202020?style=for-the-badge&amp;logo=sqlite&amp;logoColor=white" alt="SQLite">
+    </p>
+    <p>
+        <img src="https://img.shields.io/badge/Tools-404040?style=for-the-badge" alt="Tools">
         <a href="https://code.visualstudio.com/"><img src="https://img.shields.io/badge/Visual%20Studio%20Code-202020?style=for-the-badge&amp;logo=visualstudiocode" alt="Visual Studio Code"></a>
         <a href="https://git-scm.com/"><img src="https://img.shields.io/badge/Git-202020?style=for-the-badge&amp;logo=git&amp;logoColor=white" alt="Git"></a>
         <img src="https://img.shields.io/badge/Docker-202020?style=for-the-badge&amp;logo=Docker&amp;logoColor=white" alt="Docker">
