--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -133,3 +133,9 @@ import Layout from "../layouts/Layout.astro";
     </a>
   </p>
 </Layout>
+
+<style>
+  a {
+    text-decoration: none;
+  }
+</style>
