--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,6 @@
 ---
 import Links from "../components/Links.astro";
 
-export interface Props {
-  title: string;
-}
-
-const { title } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
@@ -15,7 +10,7 @@ const { title } = Astro.props as Props;
     <meta name="description" content="My personal website" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>{title}</title>
+    <title>teaishealthy</title>
   </head>
 
   <body>
