feat: add projects page

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -3,6 +3,7 @@ const currentPage = Astro.canonicalURL.pathname;
 const pages = {
   "/": "/",
   "/tools/": "/tools",
+  "/projects/": "/projects",
 };
 ---
 
