--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,5 @@
 ---
 import Links from "../components/Links.astro";
-
 ---
 
 <!DOCTYPE html>
@@ -45,6 +44,10 @@ import Links from "../components/Links.astro";
         margin-top: 2rem;
         font-weight: normal;
         font-size: 5vh;
+      }
+      :global(h2) {
+        margin-top: 2rem;
+        font-weight: normal;
       }
 
       :global(code) {
