feat: replace lorem and add basic info

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -61,6 +61,11 @@ import Links from "../components/Links.astro";
         margin-bottom: 2rem;
         font-weight: 300;
       }
+
+      :global(a) {
+        color: lightblue;
+        text-decoration: none;
+      }
     </style>
   </body>
 </html>
