--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,10 +5,14 @@ import Layout from "../layouts/Layout.astro";
 <Layout>
   <h1>Projects</h1>
 
-  <h2>Seamless Jukebox</h2>
+  <h2 id="seamless-jukebox">Seamless Jukebox</h2>
   <p class="main-content">
     <span>WIP</span> A full-stack web application that allows users to play music
     from Spotify without silence inbetween songs.
+    <br />
+    <a href="https://github.com/teaishealthy/seamless-jukebox"
+      >https://github.com/teaishealthy/seamless-jukebox
+    </a>
   </p>
 </Layout>
 
