--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,24 +6,14 @@ import Layout from "../layouts/Layout.astro";
   <h1>Hi there, I'm teaishealthy&nbsp👋</h1>
   <div class="subtitle">or tea for short</div>
   <p class="main-content">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint numquam at
-    deserunt, ut sequi fuga, sed, sit ea eius modi exercitationem soluta
-    voluptates voluptatibus hic. Blanditiis quos quaerat totam autem.
+    Hey there, I'm tea, an aspiring software developer from Germany 🇩🇪. I love
+    tinkering in Python, creating cross-platform apps in Dart and Flutter, and
+    contributing to various open source projects.
   </p>
   <p class="main-content">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint numquam at
-    deserunt, ut sequi fuga, sed, sit ea eius modi exercitationem soluta
-    voluptates voluptatibus hic. Blanditiis quos quaerat totam autem.
-  </p>
-  <p class="main-content">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint numquam at
-    deserunt, ut sequi fuga, sed, sit ea eius modi exercitationem soluta
-    voluptates voluptatibus hic. Blanditiis quos quaerat totam autem.
-  </p>
-  <p class="main-content">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint numquam at
-    deserunt, ut sequi fuga, sed, sit ea eius modi exercitationem soluta
-    voluptates voluptatibus hic. Blanditiis quos quaerat totam autem.
+    I am currently working on <a href="/projects#seamless-jukebox"
+      >Seamless Jukebox
+    </a> and this site!
   </p>
 
   <div class="socials">
