feat: add site to projects

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Layout from "../layouts/Layout.astro";
   <p class="main-content">
     I am currently working on <a href="/projects#seamless-jukebox"
       >Seamless Jukebox
-    </a> and this site!
+    </a> and this <a href="/projects#site">site!</a>
   </p>
 
   <div class="socials">
