refactor: use astro-icons for social icons

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,6 +66,10 @@ import Links from "../components/Links.astro";
         color: lightblue;
         text-decoration: none;
       }
+
+      :global([astro-icon]) {
+        color: white;
+      }
     </style>
   </body>
 </html>
