--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -1,135 +1,133 @@
 ---
+import { Icon } from "astro-icon";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
   <h1>Tools I use</h1>
-  <p>
-    <img
-      src="https://img.shields.io/badge/Languages-404040?style=for-the-badge"
-      alt="Languages"
-    />
-    <a href="https://www.python.org/about/"
-      ><img
-        src="https://img.shields.io/badge/Python-202020?style=for-the-badge&logo=python&logoColor=white"
-        alt="Python"
-      />
-    </a>
-    <a href="https://dart.dev/"
-      ><img
-        src="https://img.shields.io/badge/Dart-202020?style=for-the-badge&logo=dart"
-        alt="Dart"
-      />
-    </a>
-    <a href="https://www.javascript.com/"
-      ><img
-        src="https://img.shields.io/badge/JavaScript-202020?style=for-the-badge&logo=javascript&logoColor=white"
-        alt="JavaScript"
-      />
-    </a>
-    <a href="https://html.com/"
-      ><img
-        src="https://img.shields.io/badge/HTML-202020?style=for-the-badge&logo=html5&logoColor=white"
-        alt="HTML"
-      />
-    </a>
-    <a href="https://www.w3.org/TR/css-2020/"
-      ><img
-        src="https://img.shields.io/badge/CSS-202020?style=for-the-badge&logo=CSS3&logoColor=white"
-        alt="CSS"
-      />
-    </a>
-    <a href="https://sass-lang.com/"
-      ><img
-        src="https://img.shields.io/badge/Sass-202020?style=for-the-badge&logo=Sass&logoColor=white"
-        alt="Sass"
-      />
-    </a>
-    <img
-      src="https://img.shields.io/badge/Markdown-202020?style=for-the-badge&logo=Markdown&logoColor=white"
-      alt="Markdown"
-    />
-  </p>
-  <p>
-    <img
-      src="https://img.shields.io/badge/Frameworks-404040?style=for-the-badge"
-      alt="Frameworks"
-    />
-    <a href="https://nodejs.org/"
-      ><img
-        src="https://img.shields.io/badge/Node.js-202020?style=for-the-badge&logo=nodedotjs&logoColor=white"
-        alt="Node.js"
-      />
-    </a>
-    <a href="https://flutter.dev/"
-      ><img
-        src="https://img.shields.io/badge/Flutter-202020?style=for-the-badge&logo=flutter"
-        alt="Flutter"
-      />
-    </a>
-    <a href="https://flask.palletsprojects.com/en/2.0.x/"
-      ><img
-        src="https://img.shields.io/badge/Flask-202020?style=for-the-badge&logo=flask"
-        alt="Flask"
-      />
-    </a>
-    <a href="https://reactjs.org/"
-      ><img
-        src="https://img.shields.io/badge/React-202020?style=for-the-badge&logo=react&logoColor=white&textColor=white"
-        alt="React"
-      />
-    </a>
-    <img
-      src="https://img.shields.io/badge/Arduino-202020?style=for-the-badge&logo=arduino&logoColor=white"
-      alt="Arduino"
-    />
-  </p>
-  <p>
-    <img
-      src="https://img.shields.io/badge/Databases-404040?style=for-the-badge"
-      alt="Databases"
-    />
-    <a href="https://www.mongodb.com/"
-      ><img
-        src="https://img.shields.io/badge/MongoDB-202020?style=for-the-badge&logo=mongodb&logoColor=white"
-        alt="MongoDB"
-      />
-    </a>
-    <img
-      src="https://img.shields.io/badge/sqlite-202020?style=for-the-badge&logo=sqlite&logoColor=white"
-      alt="SQLite"
-    />
-  </p>
-  <p>
-    <img
-      src="https://img.shields.io/badge/Tools-404040?style=for-the-badge"
-      alt="Tools"
-    />
-    <a href="https://code.visualstudio.com/"
-      ><img
-        src="https://img.shields.io/badge/Visual%20Studio%20Code-202020?style=for-the-badge&logo=visualstudiocode"
-        alt="Visual Studio Code"
-      />
-    </a>
-    <a href="https://git-scm.com/"
-      ><img
-        src="https://img.shields.io/badge/Git-202020?style=for-the-badge&logo=git&logoColor=white"
-        alt="Git"
-      />
-    </a>
-    <img
-      src="https://img.shields.io/badge/Docker-202020?style=for-the-badge&logo=Docker&logoColor=white"
-      alt="Docker"
-    />
-    <img
-      src="https://img.shields.io/badge/Windows%20Terminal-202020?style=for-the-badge&logo=windowsterminal&logoColor=white"
-      alt="Windows Terminal"
-    />
-    <a href="https://caddyserver.com/"
-      ><img
-        src="https://img.shields.io/badge/Caddy-202020?style=for-the-badge&logoColor=white"
-        alt="Caddy"
-      />
-    </a>
-  </p>
+  <p></p><h2>Languages</h2>
+  <a href="https://www.python.org/about/">
+    <span class="tool">
+      <Icon name="simple-icons:python" /><span>Python</span>
+    </span>
+  </a>
+  <a href="https://dart.dev/"> </a>
+  <a href="https://www.javascript.com/">
+    <span class="tool">
+      <Icon name="simple-icons:javascript" /><span>Javascript</span>
+    </span>
+  </a>
+  <a href="https://wikipedia.org/wiki/HTML">
+    <span class="tool">
+      <Icon name="simple-icons:html5" /><span>HTML</span>
+    </span>
+  </a>
+  <a href="https://wikipedia.org/wiki/css">
+    <span class="tool">
+      <Icon name="simple-icons:css3" /><span>CSS</span>
+    </span>
+  </a>
+  <a href="https://sass-lang.com/">
+    <span class="tool">
+      <Icon name="simple-icons:sass" /><span>Sass</span>
+    </span>
+  </a>
+  <a href="https://wikipedia.org/wiki/Markdown">
+    <span class="tool">
+      <Icon name="simple-icons:markdown" /><span>Markdown</span>
+    </span>
+  </a>
+
+  <p></p><h2>Frameworks</h2>
+  <a href="https://nodejs.org/">
+    <span class="tool">
+      <Icon name="simple-icons:nodedotjs" /><span>Node.js</span>
+    </span>
+  </a>
+  <a href="https://flutter.dev/">
+    <span class="tool">
+      <Icon name="simple-icons:flutter" /><span>Flutter</span>
+    </span>
+  </a>
+  <a href="https://flask.palletsprojects.com/">
+    <span class="tool">
+      <Icon name="simple-icons:flask" /><span>Flask</span>
+    </span>
+  </a>
+  <a href="https://reactjs.org/">
+    <span class="tool">
+      <Icon name="simple-icons:react" /><span>React</span>
+    </span>
+  </a>
+
+  <a href="https://www.arduino.cc/">
+    <span class="tool">
+      <Icon name="simple-icons:arduino" /><span>Arduino</span>
+    </span>
+  </a>
+
+  <p></p><h2>Databases</h2>
+
+  <a href="https://www.mongodb.com/">
+    <span class="tool">
+      <Icon name="simple-icons:mongodb" /><span>MongoDB</span>
+    </span>
+  </a>
+  <a href="https://www.sqlite.org/index.html">
+    <span class="tool">
+      <Icon name="simple-icons:sqlite" /><span>SQLite</span>
+    </span>
+  </a>
+
+  <p></p><h2>Tools</h2>
+
+  <a href="https://code.visualstudio.com/">
+    <span class="tool">
+      <Icon name="simple-icons:visualstudiocode" /><span
+        >Visual Studio Code
+      </span>
+    </span>
+  </a>
+  <a href="https://git-scm.com/">
+    <span class="tool">
+      <Icon name="simple-icons:git" /><span>Git</span>
+    </span>
+  </a>
+
+  <a href="https://www.docker.com/"
+    ><span class="tool">
+      <Icon name="simple-icons:docker" /><span>Docker&nbsp;</span>
+      <!-- Not sure why this is -->
+    </span>
+  </a>
+
+  <a
+    href="https://apps.microsoft.com/store/detail/windows-terminal/9N0DX20HK701"
+    ><span class="tool">
+      <Icon name="simple-icons:windowsterminal" /><span>Windows Terminal</span>
+    </span>
+  </a>
+
+  <a href="https://caddyserver.com/">
+    <span class="tool">
+      <Icon name="file-icons:caddy" /><span>Caddy</span>
+    </span>
+  </a>
 </Layout>
+
+<style>
+  [astro-icon] {
+    width: 0.9rem;
+    margin: 0 4px;
+    padding-top: 3.4px;
+    /* :mmwhereismynose: */
+  }
+
+  span {
+    align-items: center;
+  }
+
+  .tool {
+    display: inline-flex;
+  }
+</style>
