feat: add astro to tools

--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -66,6 +66,12 @@ import Layout from "../layouts/Layout.astro";
     </span>
   </a>
 
+  <a href="https://www.astro.build/">
+    <span class="tool">
+      <Icon name="simple-icons:astro" /><span>Astro</span>
+    </span>
+  </a>
+
   <p></p><h2>Databases</h2>
 
   <a href="https://www.mongodb.com/">
