feat: remove wip for site

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -28,7 +28,7 @@ import { Icon } from "astro-icon";
     </span>Site
   </h2>
   <p class="main-content">
-    <span class="wip">WIP</span>My personal website
+    My personal website!
     <br />
     <a href="https://github.com/teaishealthy/site"
       >https://github.com/teaishealthy/site
