style: format Layout.astro

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,10 @@ import Links from "../components/Links.astro";
     <meta charset="UTF-8" />
     <meta name="description" content="My personal website" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="google-site-verification" content="d-h_oLPXC8tBlH3SZ-vAe7sEXSn3usXbvQKOr5Spu4I" />
+    <meta
+      name="google-site-verification"
+      content="d-h_oLPXC8tBlH3SZ-vAe7sEXSn3usXbvQKOr5Spu4I"
+    />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>teaishealthy</title>
   </head>
