fix: fix dart icon

--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -5,13 +5,18 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
   <h1>Tools I use</h1>
-  <p></p><h2>Languages</h2>
+  <p></p>
+  <h2>Languages</h2>
   <a href="https://www.python.org/about/">
     <span class="tool">
       <Icon name="simple-icons:python" /><span>Python</span>
     </span>
   </a>
-  <a href="https://dart.dev/"> </a>
+  <a href="https://dart.dev/">
+    <span class="tool">
+      <Icon name="simple-icons:dart" /><span>Dart</span>
+    </span>
+  </a>
   <a href="https://www.javascript.com/">
     <span class="tool">
       <Icon name="simple-icons:javascript" /><span>Javascript</span>
@@ -38,7 +43,8 @@ import Layout from "../layouts/Layout.astro";
     </span>
   </a>
 
-  <p></p><h2>Frameworks</h2>
+  <p></p>
+  <h2>Frameworks</h2>
   <a href="https://nodejs.org/">
     <span class="tool">
       <Icon name="simple-icons:nodedotjs" /><span>Node.js</span>
@@ -72,7 +78,8 @@ import Layout from "../layouts/Layout.astro";
     </span>
   </a>
 
-  <p></p><h2>Databases</h2>
+  <p></p>
+  <h2>Databases</h2>
 
   <a href="https://www.mongodb.com/">
     <span class="tool">
@@ -85,7 +92,8 @@ import Layout from "../layouts/Layout.astro";
     </span>
   </a>
 
-  <p></p><h2>Tools</h2>
+  <p></p>
+  <h2>Tools</h2>
 
   <a href="https://code.visualstudio.com/">
     <span class="tool">
