feat: add discord_remote_auth to projects

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -58,6 +58,18 @@ import { Icon } from "astro-icon";
       >https://github.com/teaishealthy/disfake
     </a>
   </p>
+  <h2 id="discord_remote_auth">
+    <span>
+      <Icon class="icon" name="simple-icons:python" />
+    </span>discord_remote_auth
+  </h2>
+  <p class="main-content">
+    A wrapper around discord's remote auth gateway
+    <br />
+    <a href="https://github.com/teaishealthy/discord_remote_auth"
+      >https://github.com/teaishealthy/discord_remote_auth
+    </a>
+  </p>
 </Layout>
 
 <style>
