feat: add tinychat to projects

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -22,6 +22,19 @@ import { Icon } from "astro-icon";
       >https://github.com/teaishealthy/seamless-jukebox
     </a>
   </p>
+  <h2 id="tinychat">
+    <span>
+      <Icon class="icon" name="simple-icons:typescript" />
+      <Icon class="icon" name="simple-icons:prisma" />
+    </span>tinychat
+  </h2>
+  <p class="main-content">
+    <span class="wip">WIP</span>A really simple chat platform.
+    <br />
+    <a href="https://github.com/tinychat-app"
+      >https://github.com/tinychat-app
+    </a>
+  </p>
   <h2 id="site">
     <span>
       <Icon class="icon" name="simple-icons:astro" />
