fix: use Astro.url instead of Astro.canonicalURL

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -1,5 +1,5 @@
 ---
-const currentPage = Astro.canonicalURL.pathname;
+const currentPage = Astro.url.pathname;
 const pages = {
   "/": "/",
   "/projects/": "/projects",
