--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Layout from "../layouts/Layout.astro";
   <p class="main-content">
     I am currently working on <a href="/projects#seamless-jukebox"
       >Seamless Jukebox
-    </a> and this <a href="/projects#site">site!</a>
+    </a> and <a href="/projects#tinychat">tinychat!</a>
   </p>
 
   <div class="socials">
