feat: make site project more consistent with other projects

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -38,7 +38,7 @@ import { Icon } from "astro-icon";
   <h2 id="site">
     <span>
       <Icon class="icon" name="simple-icons:astro" />
-    </span>Site
+    </span>site
   </h2>
   <p class="main-content">
     My personal website!
