chore: format with prettier

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ import Links from "../components/Links.astro";
 
   <body>
     <main>
-      <slot></slot>
+      <slot />
       <Links />
     </main>
     <style>
