feat: add vite and chakra ui

--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -66,6 +66,12 @@ import Layout from "../layouts/Layout.astro";
     </span>
   </a>
 
+  <a href="https://chakra-ui.com/">
+    <span class="tool">
+      <Icon name="simple-icons:chakraui" /><span>Chakra UI</span>
+    </span>
+  </a>
+
   <a href="https://www.arduino.cc/">
     <span class="tool">
       <Icon name="simple-icons:arduino" /><span>Arduino</span>
@@ -125,6 +131,12 @@ import Layout from "../layouts/Layout.astro";
   <a href="https://caddyserver.com/">
     <span class="tool">
       <Icon name="file-icons:caddy" /><span>Caddy</span>
+    </span>
+  </a>
+
+  <a href="https://vitejs.dev/">
+    <span class="tool">
+      <Icon name="file-icons:vite" /><span>Vite</span>
     </span>
   </a>
 </Layout>
