--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,14 +5,22 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
   <h1>Hi there, I'm teaishealthy&nbsp👋</h1>
-  <div class="subtitle">or tea for short</div>
+  <div class="subtitle">or just tea</div>
   <p class="main-content">
-    Hey there, I'm tea, an aspiring software developer from Germany 🇩🇪. I love
-    tinkering in Python, creating cross-platform apps in Dart and Flutter, and
-    contributing to various open source projects.
+    Hey there, I'm tea, an aspiring programmer and student from Germany 🇩🇪. I
+    love tinkering in Python, creating cross-platform apps in Dart and Flutter,
+    and contributing to various open source projects.
+  </p>
+
+  <p class="main-content">
+    I like the Discord API (even with all its flaws), creating bots with it and
+    contributing to frameworks and building my own <a href="/projects#disfake"
+      >(meta-)</a
+    ><a href="/projects#comity">frameworks</a> for it.
   </p>
   <p class="main-content">
-    I am currently working on <a href="/projects#seamless-jukebox"
+    I also like to create websites and web apps in various frameworks and
+    languages. I am currently working on <a href="/projects#seamless-jukebox"
       >Seamless Jukebox
     </a> and <a href="/projects#tinychat">tinychat!</a>
   </p>
