--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -42,6 +42,11 @@ import Layout from "../layouts/Layout.astro";
       <Icon name="simple-icons:markdown" /><span>Markdown</span>
     </span>
   </a>
+  <a href="https://java.com">
+    <span class="tool">
+      <Icon name="simple-icons:java" /><span>Java&nbsp;:&#8288;(</span>
+    </span>
+  </a>
 
   <p></p>
   <h2>Frameworks</h2>
@@ -146,6 +151,7 @@ import Layout from "../layouts/Layout.astro";
     width: 0.9rem;
     margin: 0 4px;
     padding-top: 3.4px;
+    color: var(--text-color);
     /* :mmwhereismynose: */
   }
 
@@ -155,5 +161,23 @@ import Layout from "../layouts/Layout.astro";
 
   .tool {
     display: inline-flex;
+    position: relative;
+  }
+
+  .tool > span {
+    position: absolute;
+    top: 0;
+    opacity: 0;
+    background-color: #000000;
+    transform: translate(-50%, -100%);
+    padding: 0.5em;
+    border-radius: 0.5em;
+    transition: ease-in-out 100ms all;
+  }
+
+  .tool:hover > span {
+    opacity: 1;
+    z-index: 1;
+    background-color: #0e0e0e;
   }
 </style>
