--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -7,6 +7,21 @@ import projects from "../projects.json";
 
 <Layout>
   <h1>Projects</h1>
+  <script>
+    console.log("loaded");
+    const hash = window.location.hash;
+    document.querySelector(hash).animate(
+      [
+        { transform: "scale(1.5)", offset: 0 },
+        { transform: "scale(1)", offset: 1 },
+      ],
+      {
+        duration: 500,
+        easing: "linear",
+        fill: "forwards",
+      }
+    );
+  </script>
   {
     projects
       .map((project) => {
@@ -22,6 +37,8 @@ import projects from "../projects.json";
 <style>
   .icon {
     height: 1rem;
+    color: var(--text-color);
+
     margin: 0 0.1rem;
   }
 </style>
