fix: icon color

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,7 +62,7 @@ import Links from "../components/Links.astro";
         --link-color: hsl(196, 82%, 51%);
       }
 
-      :global(.dark) {
+      :global(:root.dark) {
         --background-color: hsl(0, 2%, 10%);
         --text-color: white;
         --link-color: lightblue;
