--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,6 +56,7 @@ import Layout from "../layouts/Layout.astro";
   .icon {
     height: 30px;
     width: 30px;
+    color: var(--text-color);
   }
 
   .subtitle {
