--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -151,8 +151,8 @@ import Layout from "../layouts/Layout.astro";
     width: 0.9rem;
     margin: 0 4px;
     padding-top: 3.4px;
-    color: var(--text-color);
-    /* :mmwhereismynose: */
+    color: var(--text-color) !important;
+    /* :mmwhereismynose:² */
   }
 
   span {
