feat: add Keybase link to contact section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,6 +41,13 @@ import Layout from "../layouts/Layout.astro";
     >
       <Icon name="simple-icons:discord" class="icon" />
     </a>
+    <a
+      aria-label="Keybase"
+      href="https://keybase.io/teaishealthy/"
+      rel="noopener noreferrer"
+    >
+      <Icon name="simple-icons:keybase" class="icon" />
+    </a>
     <a href="mailto:teaishealthy@protonmail.com" aria-label="Mail">
       <Icon name="bi:envelope-fill" class="icon" />
     </a>
