--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Icon from "astro-icon";
+import { Icon } from "astro-icon/components";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -16,7 +16,7 @@ import Layout from "../layouts/Layout.astro";
     I like the Discord API (even with all its flaws), creating bots with it and
     contributing to frameworks and building my own <a href="/projects#disfake"
       >(meta-)</a
-    ><a href="/projects#comity">frameworks</a> for it.
+    ><a data-tooltip="2017" href="/projects#comity">frameworks</a> for it.
   </p>
   <p class="main-content">
     I also like to create websites and web apps in various frameworks and
