--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 import Project from "../components/Project.astro";
 import projects from "../projects.json";
 ---
@@ -19,7 +19,7 @@ import projects from "../projects.json";
         duration: 500,
         easing: "linear",
         fill: "forwards",
-      }
+      },
     );
   </script>
   {
