--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -40,11 +40,6 @@ import Layout from "../layouts/Layout.astro";
   <a href="https://wikipedia.org/wiki/Markdown">
     <span class="tool">
       <Icon name="simple-icons:markdown" /><span>Markdown</span>
-    </span>
-  </a>
-  <a href="https://java.com">
-    <span class="tool">
-      <Icon name="simple-icons:java" /><span>Java&nbsp;:&#8288;(</span>
     </span>
   </a>
 
